--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -2,3 +2,52 @@
 
 <p>SpringbootAngularApp</p>
 Version: {{version}}<br>
+<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+Hoi<br>
+
