Added mousewheel-scrolling component

--- a/frontend/src/app/components/navigatie-menu/navigatie-menu.component.html
+++ b/frontend/src/app/components/navigatie-menu/navigatie-menu.component.html
@@ -3,5 +3,6 @@
         <li><a href="home" [ngClass]="{'currentPage':currentPage == 'home'}">Home</a></li>
         <li><a href="overview" [ngClass]="{'currentPage':currentPage == 'overview'}">Overview</a></li>
         <li><a href="observableTest" [ngClass]="{'currentPage':currentPage == 'observableTest'}">Observable test</a></li>
+        <li><a href="mousewheelScrolling" [ngClass]="{'currentPage':currentPage == 'mousewheelScrolling'}">Mousewheel scrolling</a></li>
     </ul>
 </div>
