--- a/frontend/src/stylesheets/components/_timeSpan.scss
+++ b/frontend/src/stylesheets/components/_timeSpan.scss
@@ -5,20 +5,16 @@
     width: 500px;
     height: 100px;
     overflow-x: scroll;
-    &:first-child {
-    }
 
     .minute {
         height: 100%;
         border-left: solid black 1px;
-    }
-    .minute-div:nth-child(even) .minute {
-        background-color: dodgerblue;
-    }
-    .minute-div:nth-child(odd) .minute {
-        background-color: deepskyblue;
-    }
-    .minute-div:last-child .minute {
-//        border-right: solid black 1px;
+
+        &:nth-child(even) {
+            background-color: dodgerblue;
+        }
+        &:nth-child(odd) {
+            background-color: deepskyblue;
+        }
     }
 }
