--- a/frontend/src/app/components/overview-table/overview-table.component.html
+++ b/frontend/src/app/components/overview-table/overview-table.component.html
@@ -1,3 +1,40 @@
 <navigatie-menu></navigatie-menu>
 
 <p>overview-table works!</p>
+
+<div class="tables-twin">
+    <div class="twin-table">
+        <div>Table of twins</div>
+        <p>Names</p>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Sex</th>
+            </tr>
+            <tr>
+                <td>Bob</td>
+                <td>Male</td>
+            </tr>
+            <tr>
+                <td>Alice</td>
+                <td>Female</td>
+            </tr>
+        </table>
+        <p>
+            <input type="checkbox" [(ngModel)]="showRightPanel">Show right panel
+        </p>
+    </div>
+    <div *ngIf="showRightPanel" class="twin-table">
+        <p>Travellers</p>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Sex</th>
+            </tr>
+            <tr>
+                <td>Bob</td>
+                <td>Male</td>
+            </tr>
+        </table>
+    </div>
+</div>
