--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,7 +1,8 @@
 <navigatie-menu></navigatie-menu>
 
 <p>SpringbootAngularApp</p>
-Version: {{version}}<br>
+
+<div *ngIf="version" class="version">Versienummer: {{version.number}} / {{version.dateTime}}</div>
 <br>
 Hoi<br>
 Hoi<br>
