--- a/frontend/src/stylesheets/components/_generic.scss
+++ b/frontend/src/stylesheets/components/_generic.scss
@@ -1,5 +1,7 @@
 .version {
     position: fixed;
-    bottom: 0.5em;
+    bottom: 0;
+    right: 0;
+    padding: 0.5em;
     background-color: white;
 }
