--- a/frontend/src/app/components/mousewheel-scrolling/mousewheel-scrolling.component.html
+++ b/frontend/src/app/components/mousewheel-scrolling/mousewheel-scrolling.component.html
@@ -1,3 +1,4 @@
+<navigatie-menu></navigatie-menu>
 <div class="time-span" #timeSpan>
     <div *ngFor="let ship of ships" class="ships">
         <div class="ship" [style.margin-left.px]="ship.pos.x * minuteWidth" [style.margin-top.px]="ship.pos.y" [style.width.px]="ship.length * minuteWidth"></div>
