--- a/frontend/src/app/components/navigatie-menu/navigatie-menu.component.html
+++ b/frontend/src/app/components/navigatie-menu/navigatie-menu.component.html
@@ -4,6 +4,7 @@
         <a href="overview"><button [ngClass]="{'currentPage':currentPage == 'overview'}">Overview</button></a>
         <a href="observableTest"><button [ngClass]="{'currentPage':currentPage == 'observableTest'}">Observable Test</button></a>
         <a href="processSteps"><button [ngClass]="{'currentPage':currentPage == 'processSteps'}">Process steps</button></a>
+        <a href="three-d"><button [ngClass]="{'currentPage':currentPage == 'three-d'}">3D</button></a>
         <a href="mousewheelScrolling"><button [ngClass]="{'currentPage':currentPage == 'mousewheelScrolling'}">Mousewheel scrolling</button></a>
     </div>
 </div>
