--- a/frontend/src/app/components/navigatie-menu/navigatie-menu.component.html
+++ b/frontend/src/app/components/navigatie-menu/navigatie-menu.component.html
@@ -1,8 +1,8 @@
 <div class="menu-header">
     <div class="menu-bar">
         <a href="home" ><button [ngClass]="{'currentPage':currentPage == 'home' || currentPage == ''}">Home</button></a>
-        <a href="overview"><button [ngClass]="{'currentPage':currentPage == 'overview'}">Overview</button></a>
-        <a href="observableTest"><button [ngClass]="{'currentPage':currentPage == 'observableTest'}">Observable Test</button></a>
+        <a href="dynamic-styling"><button [ngClass]="{'currentPage':currentPage == 'dynamic-styling'}">Dynamic styling</button></a>
+        <a href="observableTest"><button [ngClass]="{'currentPage':currentPage == 'observableTest'}">Observables</button></a>
         <a href="processSteps"><button [ngClass]="{'currentPage':currentPage == 'processSteps'}">Process steps</button></a>
         <a href="three-d"><button [ngClass]="{'currentPage':currentPage == 'three-d'}">3D</button></a>
         <a href="mousewheelScrolling"><button [ngClass]="{'currentPage':currentPage == 'mousewheelScrolling'}">Mousewheel scrolling</button></a>
