--- a/frontend/src/stylesheets/components/_animation.scss
+++ b/frontend/src/stylesheets/components/_animation.scss
@@ -1,16 +1,27 @@
-.spinner {
-    display: inline-block;
-    height: 90%;
-    aspect-ratio: 1 / 1;
-    background-image: url('~assets/spinner-solid.svg');
-    background-repeat: no-repeat;
-    animation: spinner 1.2s linear infinite;
-}
-@keyframes spinner {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
+button {
+    &.spinner {
+        position: relative;
     }
 }
+
+i.spinner {
+     position: absolute;
+     top: 5%;
+     left: 42%;
+     display: inline-block;
+     height: 70%;
+     aspect-ratio: 1;
+     border-color: black transparent black transparent;
+     border-width: 5px;
+     border-style: solid;
+     border-radius: 50%;
+     animation: spinner 1.2s linear infinite;
+     @keyframes spinner {
+         0% {
+             transform: rotate(0deg);
+         }
+         100% {
+             transform: rotate(360deg);
+         }
+     }
+ }
