--- a/frontend/src/app/components/process-steps/process-steps.component.scss
+++ b/frontend/src/app/components/process-steps/process-steps.component.scss
@@ -1,5 +1,10 @@
-button.show-processes {
+.show-processes {
+    margin: 1em 0;
+    width: 250px;
+    height: 50px;
+    cursor: pointer;
     border: blue 1px solid;
+    border-radius: 0.5em;
     background-color: aqua;
 }
 
