--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
 <navigatie-menu></navigatie-menu>
+
+<div>
+  <i>Demo css-class using after that shows spinner when button is disabled.</i>
+  <button class="disabled-spinner" [disabled]="demoButtonDisabled" (click)="demoButtonSubmit()">
+    Click here to show spinner when disabled
+  </button>
+</div>
