--- a/frontend/src/stylesheets/layout/_overview.scss
+++ b/frontend/src/stylesheets/layout/_overview.scss
@@ -18,7 +18,9 @@ button {
     margin: 1em 0;
     width: 20em;
     height: 4em;
-    border-radius: 0.5em;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 1em;
     cursor: pointer;
     &:disabled {
         cursor: not-allowed;
