--- a/frontend/src/app/components/process-steps/process-steps.component.scss
+++ b/frontend/src/app/components/process-steps/process-steps.component.scss
@@ -2,13 +2,13 @@
     margin: 1em 0;
     width: 250px;
     height: 50px;
-    border: blue 1px solid;
+    border-color: blue;
     border-radius: 0.5em;
     background-color: aqua;
 }
 
 button.edit-proces {
-    border: violet 1px solid;
+    border-color: violet;
     background-color: #9400d3;
     color: white;
 }
