--- a/frontend/src/stylesheets/layout/_overview.scss
+++ b/frontend/src/stylesheets/layout/_overview.scss
@@ -42,6 +42,7 @@ textarea {
 
 select {
     margin: 1em;
+    height: 2em;
     background-color: aliceblue;
     border-radius: 0.5em;
     border: blue 1px solid;
