--- a/frontend/src/stylesheets/components/_button.scss
+++ b/frontend/src/stylesheets/components/_button.scss
@@ -1,3 +1,18 @@
+
+button, input[type=submit] {
+    margin: 1em 0;
+    width: 20em;
+    height: 4em;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 1em;
+    cursor: pointer;
+    &:disabled {
+        cursor: not-allowed;
+        opacity: 0.6;
+    }
+}
+
 form.ng-invalid button.disabled-spinner, button.disabled-spinner.not-allowed {
     cursor: not-allowed;
     pointer-events: none;
