--- a/frontend/src/app/components/dynamic-styling/dynamic-styling.component.html
+++ b/frontend/src/app/components/dynamic-styling/dynamic-styling.component.html
@@ -1,5 +1,5 @@
 <navigatie-menu></navigatie-menu>
-<div class="dynamic-styling-page">
+<div class="page">
   Dynamic styling.
 
   <h2>Async Hero Message and AsyncPipe</h2>
