--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <navigatie-menu></navigatie-menu>
 
-<form>
+<form class="page">
   <div class="items-in-row"><i>Demo css-class using </i>&nbsp;:after&nbsp;<i> that shows spinner when button is disabled.</i></div>
   <span><input type="checkbox" required [(ngModel)]="checkBoxValid">Select checkbox to make the form valid.</span>
   <div class="items-in-row">
