--- a/frontend/src/app/components/obstest/obstest.component.html
+++ b/frontend/src/app/components/obstest/obstest.component.html
@@ -1,51 +1,53 @@
 <navigatie-menu></navigatie-menu>
 
-<div class="container" *ngrxLet="things$; let thing">{{thing}}</div>
+<div class="page">
+  <div class="container" *ngrxLet="things$; let thing">{{thing}}</div>
 
-<p>obstest works!</p>
+  <p>obstest works!</p>
 
-<div class="naam">{{naam}}</div>
+  <div class="naam">{{naam}}</div>
 
-*ngrxLet
-<div class="things" *ngrxLet="things$ as things">Thing is: {{things}}</div>
-<br>
-*ngFor
-<div class="thing" *ngFor="let thing of things$ | async">{{thing}}</div>
+  *ngrxLet
+  <div class="things" *ngrxLet="things$ as things">Thing is: {{things}}</div>
+  <br>
+  *ngFor
+  <div class="thing" *ngFor="let thing of things$ | async">{{thing}}</div>
 
 
-<div class="tables-twin">
-  <div class="twin-table">
-    <div>Table of twins</div>
-    <p>Names</p>
-    <table>
-      <tr>
-        <th>Name</th>
-        <th>Sex</th>
-      </tr>
-      <tr>
-        <td>Bob</td>
-        <td>Male</td>
-      </tr>
-      <tr>
-        <td>Alice</td>
-        <td>Female</td>
-      </tr>
-    </table>
-    <p>
-      <input type="checkbox" [(ngModel)]="showRightPanel">Show right panel
-    </p>
-  </div>
-  <div *ngIf="showRightPanel" class="twin-table">
-    <p>Travellers</p>
-    <table>
-      <tr>
-        <th>Name</th>
-        <th>Sex</th>
-      </tr>
-      <tr>
-        <td>Bob</td>
-        <td>Male</td>
-      </tr>
-    </table>
+  <div class="tables-twin">
+    <div class="twin-table">
+      <div>Table of twins</div>
+      <p>Names</p>
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Sex</th>
+        </tr>
+        <tr>
+          <td>Bob</td>
+          <td>Male</td>
+        </tr>
+        <tr>
+          <td>Alice</td>
+          <td>Female</td>
+        </tr>
+      </table>
+      <p>
+        <input type="checkbox" [(ngModel)]="showRightPanel">Show right panel
+      </p>
+    </div>
+    <div *ngIf="showRightPanel" class="twin-table">
+      <p>Travellers</p>
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Sex</th>
+        </tr>
+        <tr>
+          <td>Bob</td>
+          <td>Male</td>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
