Branch Material Design

--- a/frontend/src/app/components/dynamic-styling/dynamic-styling.component.html
+++ b/frontend/src/app/components/dynamic-styling/dynamic-styling.component.html
@@ -32,3 +32,9 @@
 
   <div *ngFor="let nr of nummers; let i = index;">Nr {{nr + i}}</div>
 </div>
+
+<div style="width: 30em; height: 10em; border-radius: 1em; background-color: #aaffaa; margin-left: 5em; display: flex; justify-content: center; align-items:center;">
+  <span style="background-color: #46a35e; line-height: 5em; display: flex; justify-content: center; align-items:center;">
+    This text has to be in the center and the middle.
+  </span>
+</div>
