--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.showing-button.mat-mdc-icon-button {
+    font-size: 14px;
+    white-space: nowrap;
+    mat-icon {
+        margin-bottom: -6px;
+    }
+}
