--- a/frontend/src/app/components/process-steps/process-steps.component.html
+++ b/frontend/src/app/components/process-steps/process-steps.component.html
@@ -23,8 +23,9 @@
       <label>Waar moet de nieuwe stap komen?</label>
       <button class="disabled-spinner" style="position: relative; background-color: transparent; border: none; width: 0; height: 2em; top:-0.4em; left: 3em;"
                [disabled]="loadingNumberOfStep"></button>
-      <select name="order" [(ngModel)]="editProcessStep.order" (click)="selectStepNr($event)" required [disabled]="loadingNumberOfStep">
-        <option *ngIf="loadingNumberOfStep" disabled>Loading...</option>
+      <select name="order" [(ngModel)]="editProcessStep.order" required [disabled]="loadingNumberOfStep">
+        <option disabled>kies positie</option>
+<!--        <option *ngIf="loadingNumberOfStep" disabled>Loading...</option>-->
         <option *ngFor="let nr of selectStepOptions" [value]="nr.value">{{nr.text}}</option>
       </select>
     </div>
