--- a/frontend/src/stylesheets/main.scss
+++ b/frontend/src/stylesheets/main.scss
@@ -14,7 +14,8 @@
 'layout/header',
 'layout/footer',
 'layout/form',
-'layout/table';
+'layout/table',
+'layout/form-table';
 
 // 4. Pages
 @import
