--- a/frontend/src/app/components/security/security.component.html
+++ b/frontend/src/app/components/security/security.component.html
@@ -2,8 +2,10 @@
 
 <form class="page">
   <button (click)="getPublicCall()">Public, no credentials needed</button><br>
-  <button (click)="getPrivateCall()">Private, Basic Authorisation needed</button><br>
   <button (click)="getPrivateCallFailing()">Private, wrong credentials</button><br>
+
+  <button (click)="getPublicGreeting()">Public greeting</button><br>
+  <button (click)="getPrivateGreeting()">Private greeting</button><br>
 
   {{reply}}{{error}}
 </form>
