Spring boot security

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -38,6 +38,9 @@
         <td></td>
         <td><span [innerHTML]="error"></span></td>
       </tr>
+      <tr>
+        <td><button (click)="login()">login</button> </td><td></td>
+      </tr>
     </table>
   </form>
 </div>
