--- a/frontend/src/app/components/navigatie-menu/navigatie-menu.component.html
+++ b/frontend/src/app/components/navigatie-menu/navigatie-menu.component.html
@@ -8,7 +8,7 @@
         <a href="materialdesign"><button [ngClass]="{'currentPage':currentPage == 'materialdesign'}">Material design</button></a>
         <a href="three-d"><button [ngClass]="{'currentPage':currentPage == 'three-d'}">3D</button></a>
         <a href="mousewheelScrolling"><button [ngClass]="{'currentPage':currentPage == 'mousewheelScrolling'}">Mousewheel scrolling</button></a>
-        <a href="login"><button [ngClass]="{'currentPage':currentPage == 'login'}">{{privateStatus}}</button></a>
+        <a href="loginPage"><button [ngClass]="{'currentPage':currentPage == 'loginPage'}">{{privateStatus}}</button></a>
     </div>
 </div>
 
