--- a/frontend/src/app/components/security/security.component.html
+++ b/frontend/src/app/components/security/security.component.html
@@ -4,7 +4,7 @@
   <button (click)="getPublicCall()">Public, no credentials needed</button><br>
   <button (click)="getPrivateCallFailing()">Private, wrong credentials</button><br>
 
-  <button (click)="getPublicGreeting()">Public greeting</button><br>
+  <button (click)="getPrivateStatus()">Private status</button><br>
   <button (click)="getPrivateGreeting()">Private greeting</button><br>
 
   {{reply}}{{error}}
