--- a/frontend/src/stylesheets/components/_button.scss
+++ b/frontend/src/stylesheets/components/_button.scss
@@ -11,6 +11,13 @@ button, input[type=submit] {
         cursor: not-allowed;
         opacity: 0.6;
     }
+
+    &.small {
+        margin: 0.2em 0;
+        padding: 0;
+        width: 4em;
+        height: 1.6em;
+    }
 }
 
 form.ng-invalid button.disabled-spinner, button.disabled-spinner.not-allowed {
