--- a/frontend/src/app/components/three-d/three-d.component.html
+++ b/frontend/src/app/components/three-d/three-d.component.html
@@ -2,7 +2,8 @@
 <div class="three-d-page">
   <button class="small" (click)="planetOrbit()">start</button>
   <div *ngFor="let rotateObject of rotatingObjects">
-    <div class="circle left" style="--offsetx: {{rotateObject.planetPositionX + rotateObject.threeDoffset}}px; --offsety: {{400}}px; --radius: {{rotateObject.opticalRadius}}px;"></div>
-    <div class="circle right" style="--offsetx: {{rotateObject.planetPositionX - rotateObject.threeDoffset}}px; --offsety: {{400}}px; --radius: {{rotateObject.opticalRadius}}px;"></div>
+    <div class="circle left"
+         style="--offsetx: {{rotateObject.opticalX + rotateObject.threeDoffset}}px; --offsety: {{rotateObject.opticalY}}px; --radius: {{rotateObject.opticalRadius}}px;"></div>
+    <div class="circle right" style="--offsetx: {{rotateObject.opticalX - rotateObject.threeDoffset}}px; --offsety: {{rotateObject.opticalY}}px; --radius: {{rotateObject.opticalRadius}}px;"></div>
   </div>
 </div>
