--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -26,7 +26,7 @@
         <td></td>
         <td>
           <span *ngIf="passwordValidation.invalid && passwordValidation.touched">
-            Password should be between 10 and 20 characters long and should have at least one lowercase, one uppercase, one digit and one special character ($%@#£€*?&)
+            Password should be between 10 and 20 characters long and should have at least one lowercase, one uppercase, one digit and one special character ($%&#64;#£€*?&)
           </span>
         </td>
       </tr>
