--- a/frontend/src/app/components/mousewheel-scrolling/mousewheel-scrolling.component.html
+++ b/frontend/src/app/components/mousewheel-scrolling/mousewheel-scrolling.component.html
@@ -5,3 +5,15 @@
     </div>
     <div *ngFor="let minute of minutes; let i = index;" class="minute" [style.min-width.px]="minuteWidth - 1">{{minute}}</div>
 </div>
+
+<div class="block">
+  <svg height="400" width="100%" xmlns="http://www.w3.org/2000/svg">
+    <polyline [attr.points]="uInputPoints" style="fill:none;stroke:green;stroke-width:2" />
+    <polyline [attr.points]="uOutputPoints" style="fill:none;stroke:blue;stroke-width:2" />
+    <polyline [attr.points]="uLpoints" style="fill:none;stroke:yellow;stroke-width:2" />
+    <polyline [attr.points]="uTotalPoints" style="fill:none;stroke:red;stroke-width:3" />
+    <polyline [attr.points]="timeAxe" style="fill:none;stroke:black;stroke-width:1" />
+    Sorry, your browser does not support inline SVG.
+  </svg>
+
+</div>
